--- a/about.html
+++ b/about.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="home" href="index.html">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="https://fonts.google.com/specimen/Lato?query=lato" rel="stylesheet">
     <title>About</title>
 </head>
+
 <body>
-    <h2>About me... Comming soon</h2>
+    <div class="container">
+        <div class="nav-wrapper">
+            <div class="left-side">
+                <div class="nav-link-wrapper ">
+                    <a href="index.html">Home</a>
+                </div>
+
+                <div class="nav-link-wrapper active-nav-link">
+                    <a href="about.html">About</a>
+                </div>
+            </div>
+
+            <div class="right-side">
+                <div class="brand">
+                    <div id="author">DIMITAR DIMITROV</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="content-wrapper">
+        <div class="two-column-wrapper">
+            <div class="profile-image-wrapper">
+
+                <img src="images/jumpping.jpg" alt="parachute-jumping">
+            </div>
+
+            <div class="profile-content-wrapper">
+                <h1>Hi, thanks for visiting my site.</h1>
+                <p>I'm Dimitar Dimitrov and I'm 30 years old. I started very soon to practice programming and I love it.
+                    My purpose is to become a software developer and to start work as soon as positive. That's why I
+                    gonna give everything from myself to
+                    achieve and realize that.<br>
+                    Also, I like to practice different sports as football, cycling, different exercise programs, and of course - adrenaline experiences.</p>
+                <p>Personally, I have a great family. Me and my wife Kameliya have two gorgeous daughters - Magdalena(4
+                    years old) and Mihaela(2 years old). We love to spend our time together, to have walks in the park,
+                    to travel around the country and mostly to have fun.</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
