--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="about" href="about.html">
+    <link rel="https://fonts.google.com/specimen/Lato?query=lato" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="nav-wrapper">
             <div class="left-side">
-                <div class="nav-link-wrapper">
+                <div class="nav-link-wrapper active-nav-link">
                     <a href="index.html">Home</a>
                 </div>
 
@@ -24,7 +26,7 @@
 
             <div class="right-side">
                 <div class="brand">
-                    <div id="author">Dimitar Dimitrov</div>
+                    <div id="author">DIMITAR DIMITROV</div>
                 </div>
             </div>
         </div>
@@ -39,7 +41,7 @@
                     <div class="main-img-background" style="background-image: url(images/birthday.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/happy-birthday.png">
                         </div>
                         <div class="subtitle">
                             Magdalena is a birthday girl. She is 4 already.
@@ -51,7 +53,7 @@
                     <div class="main-img-background" style="background-image: url(images/birthday-sisteers.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/happy-birthday.png">
                         </div>
                         <div class="subtitle">
                             Magdalena and Mihaela are celebrating together.
@@ -63,7 +65,7 @@
                     <div class="main-img-background" style="background-image: url(images/fun-in-the-garden.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/sun.png">
                         </div>
                         <div class="subtitle">
                             Magdalena and Mihaela have company and they have fun.
@@ -75,10 +77,10 @@
                     <div class="main-img-background" style="background-image: url(images/ropotamo.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/sun.png">
                         </div>
                         <div class="subtitle">
-                            We have a family trip at the river Ropotamo.
+                            We have a family trip at the Ropotamo river.
                         </div>
                     </div>
                 </div>
@@ -87,7 +89,7 @@
                     <div class="main-img-background" style="background-image: url(images/sea2021\(2\).jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/beach.png">
                         </div>
                         <div class="subtitle">
                             Sea, we are coming!
@@ -99,7 +101,7 @@
                     <div class="main-img-background" style="background-image: url(images/sea2021.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/beach.png">
                         </div>
                         <div class="subtitle">
                             We don't need sun to have fun on the beach.
@@ -111,10 +113,10 @@
                     <div class="main-img-background" style="background-image: url(images/mountain.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/sun.png">
                         </div>
                         <div class="subtitle">
-                            Sunny mountain day.
+                            Sunny mountain day with good friends.
                         </div>
                     </div>
                 </div>
@@ -123,10 +125,10 @@
                     <div class="main-img-background" style="background-image: url(images/riding.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/bike.png">
                         </div>
                         <div class="subtitle">
-                            There's nothing better then a ridding bicycle in the park.
+                            There's nothing better then a ridding bicycle in the park...
                         </div>
                     </div>
                 </div>
@@ -135,10 +137,10 @@
                     <div class="main-img-background" style="background-image: url(images/ridding2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/bike.png">
                         </div>
                         <div class="subtitle">
-                            Also in the hood :)
+                            ...also in the hood :)
                         </div>
                     </div>
                 </div>
@@ -147,10 +149,10 @@
                     <div class="main-img-background" style="background-image: url(images/with-granny.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/sun.png">
                         </div>
                         <div class="subtitle">
-                            Having fun with granny.
+                            Nice spend time with granny.
                         </div>
                     </div>
                 </div>
@@ -159,7 +161,7 @@
                     <div class="main-img-background" style="background-image: url(images/sisters.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/color-splash.png">
                         </div>
                         <div class="subtitle">
                             Just like that...
@@ -171,10 +173,10 @@
                     <div class="main-img-background" style="background-image: url(images/eating-ice-cream.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img class="logo" src="images/logos/light-png-free-download-2.png">
+                            <img src="images/logos/baloons.png">
                         </div>
                         <div class="subtitle">
-                            It's so nice to share.
+                            It's so nice to share your ice-cream.
                         </div>
                     </div>
                 </div>
@@ -184,7 +186,7 @@
 </body>
 
 <script>
-
+    
     const mainItems = document.querySelectorAll(`.main-item-wrapper`)
 
     mainItems.forEach(mainItem => {
@@ -210,7 +212,6 @@
             logo.childNodes[1].classList.remove('img-darken');
         })
     })
-
 </script>
 
 </html>
